cleanup on form layout - fix wrapping problem

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -28,7 +28,7 @@
     color: green !important;
 }
 
-#customer-list-label {
+#customer-list-label, #burg-label {
     width: 30%;
     /* float: left; */
 }
